# Concurrent-web-server-simulation

./: README.md  pyproject.toml
src/concurrent_web_server_simulation/: __init__.py  fake_service_requests.txt  web.py
